Implement the bar code scanner

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation files('libs/zckjAPI-2.2.jar')
     implementation files('libs/ysapi.jar')
     implementation files('libs/SmartCardLib.jar')
+    implementation files('libs/serialport_v100.jar')
+
 
 
 
