--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -10,7 +10,7 @@ plugins {
 
 android {
     namespace = "com.appAra.newVending"
-    compileSdk = 30
+    compileSdk = flutter.compileSdkVersion
      ndkVersion "25.1.8937393"
 
 compileOptions {
@@ -26,7 +26,7 @@ kotlinOptions {
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
-        targetSdk = 30
+        targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
