--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -48,7 +48,9 @@
     <application
         android:label="newvendingmachine"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:enableOnBackInvokedCallback="true"
+        >
         <service android:name="com.wsm.comlib.service.UsbService"/>
         <activity
             android:name=".MainActivity"
