check the linter error

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,6 +38,9 @@ kotlinOptions {
             signingConfig = signingConfigs.debug
         }
     }
+       lintOptions {                                                           │
+│     checkReleaseBuilds false                                              │
+│   }   
 }
 dependencies {
  
