binder issue fix

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -51,9 +51,10 @@
         android:icon="@mipmap/ic_launcher"
         android:enableOnBackInvokedCallback="true"
         >
-        <service android:name=".UsbService"
-        android:exported="false"
-        />
+        <service
+        android:name=".UsbService"
+        android:enabled="true"
+        android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
