--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.5.2
   lottie: ^3.3.1
   carousel_slider: ^5.0.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/animation/
-    - assets/images/
+  
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
