--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,7 +30,7 @@ kotlinOptions {
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 26
-        targetSdk = flutter.targetSdkVersion
+        targetSdk = 30
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
@@ -53,6 +53,8 @@ dependencies {
     implementation files('libs/ysapi.jar')
     implementation files('libs/SmartCardLib.jar')
     implementation files('libs/usbserial_v4.5.2.jar')
+    implementation files('libs/scan_pro.jar')
+
 
 
 
