--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
     <uses-permission android:name="android.permission.USB_PERMISSION"/>
 
     <uses-feature android:name="android.hardware.usb.host" android:required="true"/>
+    <uses-permission
+        android:name="android.hardware.usb.host"
+        android:required="true" />
 
     <application
         android:label="newvendingmachine"
@@ -52,7 +55,7 @@
         android:icon="@mipmap/ic_launcher"
         android:enableOnBackInvokedCallback="true"
         >
-        <service android:name="com.wsm.comlib.service.UsbService" />
+        
         <activity
             android:name=".MainActivity"
             android:enabled="true"
