--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   carousel_slider: ^5.0.0
   http: ^1.3.0
   sumup: ^0.13.0
+  in_app_idle_detector: ^0.0.1
+  pinput: ^5.0.2
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
