--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
   pinput: ^5.0.2
   google_fonts: ^6.3.2
   flutter_downloader: ^1.12.0
-  install_plugin: ^2.1.0
+  install_plugin_v3: ^3.1.3
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
