--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_downloader: ^1.12.0
   install_plugin_v3: ^3.1.3
   package_info_plus: ^9.0.0
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
