--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,9 @@ kotlinOptions {
       
 }
 dependencies {
- 
+    implementation 'io.github.xmaihh:serialport:2.1.1'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
   implementation fileTree(dir: 'libs', include: ['*.jar']) // This will include all JAR files located in the 'libs' folder
     // If you need to add a specific jar file only:
     implementation files('libs/usdk_v120601.jar')
@@ -54,12 +56,6 @@ dependencies {
     implementation files('libs/SmartCardLib.jar')
     implementation files('libs/usbserial_v4.5.2.jar')
     implementation files('libs/scan_pro.jar')
-
-
-
-
-
-
 }
 flutter {
     source = "../.."
